--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "https://novatec.cr/"
+languageCode = "es-cr"
+title = "Novatec Industrial"
