familias al menú

--- a/config.toml
+++ b/config.toml
@@ -19,3 +19,9 @@ theme = "novatec"
     weight = 300
     identifier = "marcas"
     url = "/marcas/"
+
+[[menu.principal]]
+    name = "Familias"
+    weight = 500
+    identifier = "familias"
+    url = "/familias/"
