Agregué subfamilias a novatec construcci´øn y a taxonomías

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ theme = "novatec"
   industria = "industrias"
   marca = "marcas"
   familia = "familias"
+  subfamilia = "subfamilias"
 
 [[menu.principal]]
     name = "Industrias"
