Re-estructuraci´øn de contenido importado

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build:assets": "npm run clean && npm run sass:build && npm run babel:build",
     "build": "npm run build:assets && hugo",
     "start": "npm run clean && npm run sass:build && npm run babel:build && parallelshell 'npm run sass:watch' 'npm run babel:watch' 'hugo serve'",
-    "import": "ruby genfiles.rb && ruby gennc.rb",
-    "import-marcas": "ruby genmarcas.rb"
+    "import": "ruby import/genfiles.rb && ruby import/gennc.rb",
+    "import-marcas": "ruby import/genmarcas.rb"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
