Fix taxonomy names with special chars
When you have Taxonomy names like "Hidráulica" you need to config hugo
to be able to keep the accents on the names and to remove them from your
urls

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,10 @@ languageCode = "es-cr"
 title = "Novatec Industrial"
 theme = "novatec"
 
+#Taxonomy names with forwign characters
+preserveTaxonomyNames = true
+RemovePathAccents = true
+
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.25.1"
 
