--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "npm run build:assets && hugo",
     "start": "npm run clean && npm run sass:build && npm run babel:build && parallelshell 'npm run sass:watch' 'npm run babel:watch' 'hugo serve'",
     "import": "ruby import/genfiles.rb && ruby import/gennc.rb",
-    "import-marcas": "ruby import/genmarcas.rb"
+    "import-marcas": "ruby import/genmarcas.rb",
+    "index": "hugo-lunr -i \"content/subdir/**\" -o public/my-index.json"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
