Fix problem with js file generation

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Sitio para Novatec Industrial",
   "scripts": {
     "clean": "rm -f static/*.js static/*.css",
-    "babel:build": "babel assets/js --out-file static/site.js --source-maps",
-    "babel:watch": "babel assets/js --watch --out-file static/site.js --source-maps",
+    "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
+    "babel:watch": "babel assets/js --watch --out-file static/js/site.js --source-maps",
     "sass:watch": "onchange 'assets/scss/**/*.scss' -- npm run sass:build",
     "sass:build": "node-sass assets/scss/main.scss static/site.css",
     "build:assets": "npm run clean && npm run sass:build && npm run babel:build",
