Change site url in config

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://novatec.netlify.com/"
+baseURL = "https://www.novatec.cr/"
 languageCode = "es-cr"
 title = "Novatec Industrial"
 theme = "novatec"
