--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "sass:watch": "onchange 'assets/scss/**/*.scss' -- npm run sass:build",
     "sass:build": "node-sass assets/scss/main.scss static/site.css",
     "build:assets": "npm run clean && npm run sass:build && npm run babel:build",
-    "build": "npm run build:assets && hugo",
+    "build": "npm run build:assets && hugo && node critical.js",
     "start": "npm run clean && npm run sass:build && npm run babel:build | npm run sass:watch | npm run babel:watch | hugo serve",
     "import": "ruby import/genfiles.rb && ruby import/gennc.rb",
     "import-marcas": "ruby import/genmarcas.rb",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-babili": "0.0.9",
+    "critical": "^1.3.3",
     "node-sass": "^4.1.1",
     "onchange": "^3.2.1",
     "parallelshell": "^2.0.0"
