--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "rm -f static/*.js static/*.css",
     "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
+    "babel:minify": "minify assets/site.js --out-file static/js/site.js --mangle.keepClassName",
     "babel:watch": "babel assets/js --watch --out-file static/js/site.js --source-maps",
     "sass:watch": "onchange 'assets/scss/**/*.scss' -- npm run sass:build",
     "sass:build": "node-sass assets/scss/main.scss static/site.css",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-minify": "^0.4.3",
     "babel-preset-babili": "0.0.9",
     "critical": "^1.3.3",
     "node-sass": "^4.1.1",
