Fix minify js command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -f static/*.js static/*.css",
     "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
-    "babel:minify": "minify assets/site.js --out-file static/js/site.js --mangle.keepClassName",
+    "babel:minify": "minify static/js/site.js --out-file static/js/site.js --mangle.keepClassName",
     "babel:watch": "babel assets/js --watch --out-file static/js/site.js --source-maps",
     "sass:watch": "onchange 'assets/scss/**/*.scss' -- npm run sass:build",
     "sass:build": "node-sass assets/scss/main.scss static/site.css --output-style compressed",
