Ordenar contenido de productos - familias

--- a/import/v5n_novatec_productos.yml
+++ b/import/v5n_novatec_productos.yml
@@ -1016,7 +1016,7 @@
   checked_out: 0
   checked_out_time: "0000-00-00 00:00:00"
   created_by: 995
-  titulo: "Valvulas de Control de Proceso"
+  titulo: "Válvulas de Control de Proceso"
   descripcion: ""
   marcas: 7
   familia: 12
@@ -2088,7 +2088,7 @@
   checked_out: 0
   checked_out_time: "0000-00-00 00:00:00"
   created_by: 996
-  titulo: "Valvulas bola tipo Trunnion - API 6D (Valbart) "
+  titulo: "Válvulas bola tipo Trunnion - API 6D (Valbart) "
   descripcion: ""
   marcas: 7
   familia: 12
