--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
   base = "."
   functions = "./functions"
+  command = "npm run build && cd functions/getresponse && npm install && cd../..'"
