--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base = "."
   functions = "./functions"
-  command = "npm run build && cd functions/getresponse && npm install && cd../..'"
+  command = "npm run build'"
