--- a/functions/submission-created/package.json
+++ b/functions/submission-created/package.json
@@ -16,6 +16,6 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "encoding": "^0.1.12",
-    "node-fetch": "^2.3.0"
+    "https": "^1.0.0"
   }
 }
