--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "import": "ruby import/genfiles.rb && ruby import/gennc.rb",
     "import-marcas": "ruby import/genmarcas.rb",
     "index": "hugo-lunr -i \"content/subdir/**\" -o public/my-index.json",
-    "postinstall": "cd functions/submission-created && npm install"
+    "zip": "cd functions/submission-created && npm install && zip -r submission-created.zip *",
+    "postzip": "mv functions/submission-created/submission-created.zip functions-build",
+   "prebuild": "npm run clean && npm run zip"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
