--- a/.forestry/front_matter/templates/servicio-tecnico.yml
+++ b/.forestry/front_matter/templates/servicio-tecnico.yml
@@ -22,6 +22,28 @@ fields:
     schema:
       format: markdown
   label: info
+  - name: menu
+  label: Menu
+  type: field_group
+  fields:
+  - name: principal
+    label: Principal
+    type: field_group
+    fields:
+    - name: parent
+      label: Parent
+      type: text
+      hidden: true
+      default: Servicio Técnico
+    - name: weight
+      label: Weight
+      type: text
+      hidden: false
+      default: ''
+    hidden: false
+    default: ''
+  hidden: true
+  default: ''
 pages:
 - content/servicio-tecnico/prueba.md
 - content/servicio-tecnico/servicio-tecnico.md
