agregar página a template de servicio técnico

--- a/.forestry/front_matter/templates/servicio-tecnico.yml
+++ b/.forestry/front_matter/templates/servicio-tecnico.yml
@@ -25,3 +25,4 @@ fields:
 pages:
 - content/servicio-tecnico/prueba-servicio.md
 - content/servicio-tecnico/prueba.md
+- content/servicio-tecnico/_index.md
