--- a/.forestry/front_matter/templates/servicio-tecnico.yml
+++ b/.forestry/front_matter/templates/servicio-tecnico.yml
@@ -11,3 +11,25 @@ fields:
 - type: text
   name: info
   label: info
+- name: menu
+  label: Menu
+  type: field_group
+  fields:
+  - name: principal
+    label: Principal
+    type: field_group
+    fields:
+    - name: parent
+      label: Parent
+      type: text
+      hidden: true
+      default: Servicio Técnico
+    - name: weight
+      label: Weight
+      type: text
+      hidden: false
+      default: ''
+    hidden: false
+    default: ''
+  hidden: true
+  default: ''
