--- a/.forestry/front_matter/templates/servicio-tecnico.yml
+++ b/.forestry/front_matter/templates/servicio-tecnico.yml
@@ -2,14 +2,19 @@
 label: Servicio Técnico
 hide_body: false
 fields:
-- type: text
-  name: title
-  label: title
-- type: file
-  name: hero
+- name: hero
   label: hero
-- type: text
-  name: info
-  label: info
+  type: file
+  config:
+    maxSize: 64
+- name: info
+  type: textarea
+  default: ''
+  config:
+    label: info
+    required: false
+    wysiwyg: false
+    schema:
+      format: markdown
 pages:
 - content/servicio-tecnico/reparacion-de-bombas.md
