--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "description": "Sitio para Novatec Industrial",
   "scripts": {
-    "dev": "tinacms dev -c \"hugo server -D\"",
-    "clean": "rm -f static/*.js static/*.css",
+    "dev": "npx tinacms dev && npm run sass:build && npm run babel:build",
+    "clean": "npm run clean && npm run sass:build && npm run babel:build",
+    "build": "npm run clean && npm run sass:build && npm run babel:build && npm run babel:minify && hugo",
     "windowsclean": "del /S static\\*.js static\\*.css",
     "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
     "babel:minify": "minify static/js/site.js --out-file static/js/site.js --mangle.keepClassName",
@@ -13,7 +14,6 @@
     "sass:watch": "onchange 'assets/scss/**/*.scss' -- npm run sass:build",
     "sass:build": "node-sass assets/scss/main.scss static/site.css --output-style compressed",
     "build:assets": "npm run clean && npm run sass:build && npm run babel:build && npm run babel:minify",
-    "build": "npx tinacms dev",
     "start": "npm run clean && npm run sass:build && npm run babel:build | npm run sass:watch | npm run babel:watch | hugo serve -D --bind 0.0.0.0",
     "windowsstart": "npm run windowsclean && npm run sass:build && npm run babel:build | npm run sass:watch | npm run babel:watch | hugo serve -D --bind 0.0.0.0",
     "drafts": "npm run clean && npm run sass:build && npm run babel:build | npm run sass:watch | npm run babel:watch | hugo serve -D --bind 0.0.0.0",
