--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "description": "Sitio para Novatec Industrial",
   "scripts": {
-    "dev": "npx tinacms dev && npm run sass:build && npm run babel:build",
+    "dev": "tinacms dev -c \"hugo server - D\"",
     "clean": "npm run clean && npm run sass:build && npm run babel:build",
-    "build": "npm run clean && npm run sass:build && npm run babel:build && npm run babel:minify && hugo",
+    "build": "tinacms build && hugo",
     "windowsclean": "del /S static\\*.js static\\*.css",
     "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
     "babel:minify": "minify static/js/site.js --out-file static/js/site.js --mangle.keepClassName",
