--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Sitio para Novatec Industrial",
   "scripts": {
     "dev": "tinacms dev -c \"hugo server - D\"",
+    "clean": "npm cache clean --force",
     "build": "tinacms build && hugo",
     "windowsclean": "del /S static\\*.js static\\*.css",
     "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
