--- a/.forestry/front_matter/templates/noticias.yml
+++ b/.forestry/front_matter/templates/noticias.yml
@@ -91,3 +91,4 @@ pages:
 - content/noticias/valvulas-de-doble-excentricidad.md
 - content/noticias/valvulas-de-mariposa-tipo-boax-b.md
 - content/noticias/variadores-de-velocidad-vdf-pumpdrive.md
+- content/noticias/cambio-cytiva.md
