--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tinacms dev -c \"hugo server - D\"",
     "clean": "npm cache clean --force",
-    "build": "tinacms build",
+    "build": "tinacms build && npm run build:assets && hugo && node critical.js",
     "windowsclean": "del /S static\\*.js static\\*.css",
     "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
     "babel:minify": "minify static/js/site.js --out-file static/js/site.js --mangle.keepClassName",
