--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "description": "Sitio para Novatec Industrial",
   "scripts": {
-    "audit": "tinacms audit",
+    "audit": "tinacms audit -v",
     "dev": "tinacms dev -c \"hugo server - D\"",
     "clean": "npm cache clean --force",
-    "build": "tinacms build && npm run build:assets && hugo && node critical.js",
+    "build": "tinacms build -v --local && npm run build:assets && hugo && node critical.js",
     "windowsclean": "del /S static\\*.js static\\*.css",
     "babel:build": "babel assets/js --out-file static/js/site.js --source-maps",
     "babel:minify": "minify static/js/site.js --out-file static/js/site.js --mangle.keepClassName",
