more config for cloudinary image storage

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,12 @@
   base = "."
   functions = "./functions"
   command = "npm run build"
+[[redirects]]
+    force = true
+    from = '/api/*'
+    to = '/.functions/api/:splat'
+    status = 200
+[functions]
+    external_node_modules = ["express", "vm2"]
+    node_bundler = 'esbuild'
   
