--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@tinacms/auth": "^1.0.3",
     "@tinacms/cli": "^1.4.1",
     "daemon": "github:zipang/daemon.node#48d0977c26fb3a6a44ae99aae3471b9d5a761085",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "imagemin": "^8.0.1",
     "js-yaml": "^4.1.0",
-    "next-tinacms-cloudinary": "^4.3.2",
+    "next-tinacms-cloudinary": "^4.3.7",
     "sass": "^1.64.1",
+    "serverless-http": "^3.2.0",
     "tinacms": "^1.5.17",
     "toml": "^3.0.0"
   },
